--- a/content/data/config.json
+++ b/content/data/config.json
@@ -9,7 +9,7 @@
     "header": {
         "title": "Podcaster",
         "logo": "/images/Logo.png",
-        "logo_alt": "Podcaster logo",
+        "logo_alt": "logo",
         "has_primary_nav": true,
         "primary_nav_links": [
             {
