--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "sans-serif",
     "header": {
         "title": "Podcaster",
-        "logo": "/images/Logo.png",
+        "logo": "/images/Logo-9ae83b4f.png",
         "logo_alt": "Sitewebcrea34 logo",
         "has_primary_nav": true,
         "primary_nav_links": [
